[project]
name = "langchain-agent01"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tenacity>=9.1.4",
    "py-spy>=0.4.2",
    "snakeviz>=2.2.2",
]
